# hands_on_llm

./: .gitignore  pyproject.toml
chapter_1/: first_text.py  sample.http  server.py
chapter_2/: song_embedding.py  tokenizer.py
chapter_4/: sentiment.py
chapter_5/: __init__.py  clustering.py  original_topic_label.csv  reduce_df.py  topic_modeling.py
chapter_7/: agents.py  chaining.py  multiple_prompts.py
chapter_8/: dense_retrieval.py  keywords_search.py  rag.py  reranking.py
