[project]
name = "hands-on-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "datasets==4.0.0",
    "dill==0.3.8",
    "evaluate==0.4.5",
    "fastapi[standard]>=0.116.1",
    "filelock==3.19.1",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "hf-xet==1.1.9",
    "huggingface-hub==0.34.4",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "networkx==3.5",
    "numpy==2.2",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "pyarrow==21.0.0",
    "pyperclip>=1.9.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "tiktoken==0.11.0",
    "tokenizers==0.22.0",
    "torch>=2.8.0",
    "tqdm==4.67.1",
    "transformers==4.56.0",
    "triton==3.4.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
